force-app/main/default/objects/Work_Notes__c/Work_Notes__c.object-meta.xml
<CustomObject>
    <label>Work Note</label>
    <nameField>
        <displayFormat>WN-{0000000}</displayFormat>
        <label>Work Notes Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Notes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>