force-app/main/default/objects/Work_Notes__c/fields/Beacon_Call_Note__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Call_Note__c</fullName>
    <label>Call Note</label>
    <referenceTo>Beacon_Call_Notes__c</referenceTo>
    <relationshipLabel>Work Notes</relationshipLabel>
    <relationshipName>Work_Notes</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>