force-app/main/default/objects/Work_Notes__c/fields/Win_Validated__c.field-meta.xml
<CustomField>
    <fullName>Win_Validated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Win Validated</label>
    <type>Checkbox</type>
</CustomField>