force-app/main/default/objects/Work_Notes__c/recordTypes/Work_Note.recordType-meta.xml
<RecordType>
    <fullName>Work_Note</fullName>
    <active>true</active>
    <description>User to log comments against a specific call or collection note.</description>
    <label>Work Note</label>
</RecordType>